--- a/lakeside/index.html
+++ b/lakeside/index.html
@@ -14,7 +14,8 @@
       </a-assets>
 
       <!-- Model. -->
-      <a-entity obj-model="obj: #lakeside-obj; mtl: #lakeside-mtl" position="0 -1 -5"></a-entity>
+      <a-entity obj-model="obj: #lakeside-obj; mtl: #lakeside-mtl"
+                position="11 -1 -10" rotation="0 30 0"></a-entity>
 
       <!-- Lights. -->
       <a-light type="ambient" color="#333"></a-light>
