--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A-Frame</title>
+    <title>Pokemon</title>
+
+    <meta name="description" content="Pokemon in MagicaVoxel and A-Frame"/>
+    <meta name="twitter:card" content="Pokemon in MagicaVoxel and A-Frame">
+    <meta name="twitter:site" content="@andgokevin">
+    <meta name="twitter:title" content="Pokemon">
+    <meta name="twitter:description" content="Pokemon in MagicaVoxel and A-Frame">
+    <meta name="twitter:creator" content="@andgokevin">
+    <meta name="twitter:image" content="https://ngokevin.github.io/aframe-magicavoxel-projects/pokemon/preview.png">
+    <meta property="og:title" content="Pokemon in MagicaVoxel and A-Frame"/>
+    <meta property="og:image" content="https://ngokevin.github.io/aframe-magicavoxel-projects/pokemon/preview.png"/>
+
     <script src="../lib/aframe.min.js"></script>
     <script src="../lib/aframe-extras.loaders.min.js"></script>
     <script src="../lib/aframe-animation-component.min.js"></script>
