--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -18,6 +18,7 @@
     <script src="../lib/aframe-extras.loaders.min.js"></script>
     <script src="../lib/aframe-animation-component.min.js"></script>
     <script src="../lib/aframe-particle-system-component.min.js"></script>
+    <script src="../lib/aframe-look-at-component.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -34,7 +35,8 @@
       <!-- Particles. -->
       <a-entity particle-system="preset: dust; particleCount: 1000" position="0 2.5 -15"></a-entity>
 
-      <a-image src="#charizard" transparent="true" shader="standard" position="0 7 -40" scale="20 20 1"></a-image>
+      <a-image src="#charizard" transparent="true" shader="standard" position="0 7 -40"
+               scale="20 20 1" look-at="[camera]"></a-image>
 
       <!-- Lights. -->
       <a-light type="ambient" color="#777"></a-light>
@@ -45,6 +47,7 @@
       </a-entity>
 
       <a-sky color="#111"></a-sky>
+      <a-camera position="0 1.8 4"></a-camera>
     </a-scene>
   </body>
 </html>
