--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -59,8 +59,8 @@
       <!-- Pikachu. -->
       <a-entity ply-model="src: #pikachu-ply" position="1.4 -0.6 -3" scale=".1 .1 .1"
                 rotation="-90 -80 0"></a-entity>
-      <a-sphere position="1.4 -0.6 -3.5" rotation="-90 0 0"
-                color="yellow" radius="1.8" opacity="0.3" shader="flat"
+      <a-sphere src="images/lightning.jpg" position="1.4 -0.6 -3.5" rotation="-90 0 0"
+                color="#FFF" radius="1.8" opacity="0.3" shader="flat"
                 animation="property: opacity; loop: true; to: 0.4; dur: 1000"></a-sphere>
 
       <!-- Particles. -->
