--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h1>A-Frame MagicaVoxel Projects</h1>
 
     <ul id="container">
+      <li><a href="outsidelands/" title="Outside Lands" style="background-image: url(outsidelands/preview.png)"></a></li>
       <li><a href="pokemon/" title="Pokemon" style="background-image: url(pokemon/preview.png)"></a></li>
       <li><a href="aframe/" title="A-Frame" style="background-image: url(aframe/preview.png)"></a></li>
       <li><a href="tree/" title="Tree" style="background-image: url(tree/preview.png)"></a></li>
