reintro particle systems with cursor whitelist

--- a/outsidelands/index.html
+++ b/outsidelands/index.html
@@ -74,7 +74,7 @@
                 position="0 10 20" rotation="-15 0 0"></a-entity>
 
       <a-entity camera="userHeight: 1.8" look-controls wasd-controls>
-        <a-cursor color="#DADADA"></a-cursor>
+        <a-cursor color="#DADADA" raycaster="objects: [mixin='album']"></a-cursor>
       </a-entity>
 
       <!-- Particles. -->
