--- a/outsidelands/index.html
+++ b/outsidelands/index.html
@@ -8,10 +8,12 @@
     <script src="../lib/aframe-audio-visualizer-components.min.js"></script>
     <script src="../lib/aframe-event-set-component.min.js"></script>
     <script src="../lib/aframe-layout-component.min.js"></script>
+    <script src="../lib/aframe-bmfont-text-component.min.js"></script>
     <script src="../lib/aframe-entity-generator-component.js"></script>
     <script src="components/audio-visualizer-spectrum-scale.js"></script>
     <script src="components/pause.js"></script>
     <script src="components/play-audio.js"></script>
+    <script src="components/play-video.js"></script>
     <script src="components/scale-y-color.js"></script>
   </head>
   <body>
@@ -23,7 +25,11 @@
         <img id="rhead" src="img/rhead.jpg">
         <img id="lcd" src="img/lcd.jpg">
         <img id="lana" src="img/lana.jpg">
-        <a-mixin id="album" material="opacity: 0.6"></a-mixin>
+        <a-mixin id="album" material="opacity: 0.6"
+                 animation__mouseenter="startEvents: mouseenter; property: scale;
+                                        to: 1.2 1.2 1.2"
+                 animation__mouseleave="startEvents: mouseleave; property: scale;
+                                        to: 1 1 1"></a-mixin>
         <a-mixin id="bar"
                  geometry="primitive: box" material="color: black; opacity: 0.8"
                  scale-y-color="from: 30 30 30; to: 230 230 230; maxScale: 10"></a-mixin>
@@ -44,50 +50,55 @@
                   entity-generator="mixin: bar; num: 200"
                   layout="type: circle; radius: 4.5"
                   rotation="0 135 0"></a-entity>
+        <!-- Video. -->
+        <a-video id="video" src="video/daydreaming.mp4" height="17" width="24"
+                 position="0 7 -6"></a-video>
         <!-- Stage light.-->
-        <a-light type="point" decay="2" distance="35"></a-light>
+        <a-light type="point" decay="2" distance="35" intensity="0.5"
+                 animation="property: light.intensity; dir: alternate; loop: true;
+                            to: 1.4"
+                 animation__color="property: light.color; dir: alternate; loop: true;
+                                   to: #EEF"></a-light>
       </a-entity>
 
       <!-- Album UI. -->
       <a-entity animation="property: position; dir: alternate; dur: 2000;
-                           loop: true; to: 0 0.02 0">
+                           loop: true; to: 0 0.02 0" position="0 0 -0">
         <a-curvedimage mixin="album" src="#rhead" position="-1 1 2" radius="4"
                        play-audio="src: #rhead"
+                       play-video="target: #video; src: video/daydreaming.mp4"
                        event-set="_event: click; _target: #audioViz;
                                   audio-visualizer.src: #rhead"
-                       animation__mouseenter="startEvents: mouseenter; dur: 200;
-                                              property: scale; to: 1.2 1.2 1.2"
-                       animation__mouseleave="startEvents: mouseleave; dur: 200;
-                                              property: scale; to: 1 1 1"
                        theta-length="15" rotation="0 180 0"></a-curvedimage>
         <a-image mixin="album" src="#lcd" position="0 1 -2"
                  event-set="_event: click; _target: #audioViz;
                             audio-visualizer.src: #dance"
-                 animation__mouseenter="startEvents: mouseenter; dur: 200;
-                                        property: scale; to: 1.2 1.2 1.2"
-                 animation__mouseleave="startEvents: mouseleave; dur: 200;
-                                        property: scale; to: 1 1 1"
-                 play-audio="src: #dance"></a-image>
+                 play-audio="src: #dance"
+                 play-video="target: #video; src: video/dance.mp4"></a-image>
         <a-curvedimage mixin="album" src="#lana" position="0.6 1 2" radius="4"
                        event-set="_event: click; _target: #audioViz;
                                   audio-visualizer.src: #ss"
-                       animation__mouseenter="startEvents: mouseenter; dur: 200;
-                                              property: scale; to: 1.2 1.2 1.2"
-                       animation__mouseleave="startEvents: mouseleave; dur: 200;
-                                              property: scale; to: 1 1 1"
                        play-audio="src: #ss"
+                       play-video="target: #video; src: video/summertime.mp4"
                        theta-length="15" rotation="0 160 0"></a-curvedimage>
       </a-entity>
 
+      <!-- Text. -->
+      <a-entity
+        bmfont-text="color: #888; text: Click-drag the reticle onto album cover to change song on desktop. Works with Rift + Vive."
+        rotation="-90 0 0"
+        position="-2.3 0.1 -1.9"></a-entity>
+
       <!-- Lights. -->
       <a-light type="ambient" color="#444"></a-light>
-      <a-entity light="type: spot; color: #BBB; penumbra: 0.8; decay: 0; distance: 50"
-                position="0 10 20" rotation="-15 0 0"></a-entity>
+      <a-entity
+        light="type: spot; color: #BBB; penumbra: 0.8; decay: 0; distance: 50"
+        position="0 10 20" rotation="-15 0 0"
+        animation="property: rotation; dir: alternate; loop: true; to: 0 0 0"></a-entity>
 
-      <a-entity camera="userHeight: 1.8" look-controls wasd-controls>
-        <a-cursor color="#DADADA" raycaster="interval: 500; objects: [mixin='album']">
-        </a-cursor>
-      </a-entity>
+      <a-camera>
+        <a-cursor color="#DADADA" raycaster="interval: 500; objects: [mixin='album']"></a-cursor>
+      </a-camera>
 
       <!-- Ground. -->
       <a-plane src="#grass" rotation="-90 0 0" height="100" width="100"
