--- a/outsidelands/index.html
+++ b/outsidelands/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Outside Lands VR</title>
     <script src="../lib/aframe.min.js"></script>
-    <script src="../lib/aframe-animation-component.min.js"></script>
-    <script src="../lib/aframe-audio-visualizer-components.min.js"></script>
-    <script src="../lib/aframe-event-set-component.min.js"></script>
-    <script src="../lib/aframe-layout-component.min.js"></script>
-    <script src="../lib/aframe-bmfont-text-component.min.js"></script>
-    <script src="../lib/aframe-entity-generator-component.js"></script>
+    <script src="https://npmcdn.com/aframe-animation-component@3.0.1"></script>
+    <script src="https://npmcdn.com/aframe-audio-visualizer-components@3.0.1"></script>
+    <script src="https://npmcdn.com/aframe-event-set-component@3.0.1"></script>
+    <script src="https://npmcdn.com/aframe-layout-component@3.0.1"></script>
+    <script src="https://npmcdn.com/aframe-bmfont-text-component@0.1.2/dist/aframe-bmfont-text-component.min.js"></script>
+    <script src="https://npmcdn.com/aframe-entity-generator-component@3.0.0"></script>
     <script src="components/audio-visualizer-spectrum-scale.js"></script>
     <script src="components/pause.js"></script>
     <script src="components/play-audio.js"></script>
