--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -16,9 +16,9 @@
 
     <script src="../lib/aframe.min.js"></script>
     <script src="../lib/aframe-extras.loaders.min.js"></script>
-    <script src="../lib/aframe-animation-component.min.js"></script>
-    <script src="../lib/aframe-particle-system-component.min.js"></script>
-    <script src="../lib/aframe-look-at-component.min.js"></script>
+    <script src="https://npmcdn.com/aframe-animation-component@3.0.1"></script>
+    <script src="https://npmcdn.com/aframe-particle-system-component@1.0.1/dist/aframe-particle-system-component.min.js"></script>
+    <script src="https://npmcdn.com/aframe-look-at-component@1.0.2"></script>
   </head>
   <body>
     <a-scene>
