--- a/aframe/index.html
+++ b/aframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>A-Frame</title>
     <script src="../lib/aframe.min.js"></script>
-    <script src="../lib/aframe-extras.loaders.min.js"></script>
+    <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
   </head>
   <body>
     <a-scene>
